--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(CheckMediationInputs)
 export(CreateMedInputs)
 export(CreateMedMSMInputs)
 export(GenerateData)
+export(ltmleMediation)
 export(make.sim.spec)
 export(medltmle)
