Function to deal with possibly time ordering issues among baseline covariates, and many possible single time-point interventions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(CheckMediationInputs)
 export(CreateMedInputs)
 export(CreateMedMSMInputs)
+export(GenerateData)
+export(GenerateData_SingA_TimeOrdL)
 export(MainCalcsMediation)
 export(ltmleMediation)
+export(make.sim.spec)
 export(medltmle)
+export(timeOrder_baseline)
