Small changes to the simulation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CheckMediationInputs)
 export(CreateMedInputs)
 export(CreateMedMSMInputs)
 export(GenerateData)
+export(GenerateData_SingA_TimeOrdL)
 export(ltmleMediation)
-export(make.sim.spec)
 export(medltmle)
+export(timeOrder_baseline)
