--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(CreateMedMSMInputs)
 export(GenerateData)
 export(GenerateData_SingA_TimeOrdL)
 export(MainCalcsMediation)
+export(dataConvert)
 export(ltmleMediation)
+export(make.sim.spec)
 export(medltmle)
 export(timeOrder_baseline)
