--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,8 @@ export(make.sim.spec)
 export(medltmle)
 export(summary_medltmle)
 export(timeOrder_baseline)
+import(SuperLearner)
+import(matrixStats)
+import(pracma)
+import(reshape)
+import(speedglm)
